2006-05-26  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
   Fixed nasty hang when closing a tab and both the next tab and the
   first tab files have been externally modified.
 * src/dialogs.c: Add mnemonics to Replace dialog buttons, reorder.


2006-05-25  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/document.c: On loading use SCI_SETTEXT instead of SCI_ADDTEXT
                   to avoid Scintilla text changed signal.
 * src/callbacks.c, src/document.c, src/document.h:
   Make Replace in selection non-incremental and use single Undo
   blocks for this and for Replace All.


2006-05-24  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keybindings.c, src/keybindings.h:
   Add shortcuts for Find Previous, Go to line
 * src/keybindings.c:
   Set shortcut for Replace and split keybindings_init code


2006-05-23  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c: check if file has been closed in
                utils_goto_workspace_tag
 * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
   created Search menubar item with Find items from Edit menu, added
   Find Previous and Go to line commands
 * src/vte.c: remove vte middle click override to allow X paste and
              update popup preferences item for Terminal tab number


2006-05-22  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/callbacks.c, src/templates.c:
   insert the file type extension and fix a warning when inserting a
   fileheader in a new document


2006-05-22  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/keybindings.c, src/utils.c: improved toggle visibility of
                                   sidebar when toggled by keyboard


2006-05-21  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/keybindings.c: added menu_messagewindow and toggle_sidebar
                      shortcuts
 * src/highlighting.c, data/filetypes.c, data/filetypes.cpp: