@@ -4,6 +4,8 @@
    Fixed nasty hang when closing a tab and both the next tab and the
    first tab files have been externally modified.
  * src/dialogs.c: Add mnemonics to Replace dialog buttons, reorder.
+ * src/document.c: Fix incremental find and replace of back to back
+                   matches.
 
 
 2006-05-25  Nick Treleaven  <nick.treleaven@btinternet.com>
